# rapidzkey

./: .gitignore  Cargo.toml  DEBUGGING.md  LICENSE  README.md  TECHNICAL.md
.github/workflows/: ci.yml
examples/: README.md
examples/multiplier/: multiplier.circom
examples/scripts/: bench_large.sh  test_multiplier.sh
examples/webauthn/: README.md
src/: main.rs  msm_fast.rs  ptau_reader.rs  zkey_writer.rs
test_circuit/: multiplier.circom
