[package]
name = "zk-setup"
version = "0.1.0"
edition = "2021"
description = "Fast multi-threaded Groth16 trusted setup for Circom circuits. Drop-in replacement for `snarkjs groth16 setup` — 20-60x faster, byte-identical output."
license = "MIT"
repository = "https://github.com/asimashfaq/rapidzkey"
keywords = ["zk", "groth16", "snarkjs", "circom", "trusted-setup"]
categories = ["cryptography", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "zk-setup"
path = "src/main.rs"

[dependencies]
# ZK cryptography (arkworks ecosystem v0.5)
ark-groth16 = { version = "0.5", features = ["parallel"] }
ark-bn254 = "0.5"
ark-ff = { version = "0.5", features = ["parallel"] }
ark-ec = { version = "0.5", features = ["parallel"] }
ark-std = { version = "0.5", features = ["parallel"] }
ark-poly = { version = "0.5", features = ["parallel"] }
ark-serialize = "0.5"
ark-relations = "0.5"
ark-circom = "0.5"
ark-snark = "0.5"

# Parallelism
rayon = "1.8"

# CLI
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"

# Serialization
serde_json = "1.0"
num-bigint = "0.4"
hex = "0.4"
byteorder = "1.5"
rand = "0.8"
blake2b_simd = "1"

# Async (needed by ark-circom's wasmer backend)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
indicatif = "0.17"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# Dev profile: fast compile but optimize crypto deps
[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.ark-ff]
opt-level = 3
[profile.dev.package.ark-ec]
opt-level = 3
[profile.dev.package.ark-groth16]
opt-level = 3
[profile.dev.package.ark-bn254]
opt-level = 3
[profile.dev.package.ark-circom]
opt-level = 3
